@@ -12,6 +12,7 @@ freeradius (0.8.1+0.9pre20030511-1) unstable; urgency=low
   * Patch to 'configure' to work with openssl0.9.7
   * Made /etc/init.d/freeradius actually able to find the process to stop.
   * Enabled the daemon to run under user 'freerad:freerad' by default.
+  * Added support for DEB_BUILD_OPTIONS for policy 3.5.9 compliance.
 
  -- Paul Hampson <Paul.Hampson@anu.edu.au>  Sun,  4 May 2003 03:33:57 +1000
 
